Attempt to add list reload method

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         $(document).ready(function () {
             new Vue({ el: '#divCreateTimeSheet' });
-            objListTimeSheets = new Vue({ el: '#divListTimeSheets' });
+            new Vue({ el: '#divListTimeSheets' });
         });
     </script>
 </head>
