Add time entry component

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="js/dataServices.js"></script>
     <script src="js/bootstrap.js"></script>
 
+    <script src="components/create-time-entry.js"></script>
     <script src="components/create-time-sheet.js"></script>
     <script src="components/list-time-sheets.js"></script>
     
