Edit layout of time entry screen and validation

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <script>
         var fsDataServices;
         var timeSheetData;
+        var currentTimeSheetId = "fixme";
 
         function loadTimeSheetList(){
             fsDataServices.getTimeSheets().then(function(items) {
