Creating time sheet app component

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
     <script src="components/create-time-entry.js"></script>
     <script src="components/create-time-sheet.js"></script>
-    <script src="components/list-time-sheets.js"></script>
     <script src="components/list-time-entries.js"></script>
+    <script src="components/time-sheet-app.js"></script>
     
     <script>
         var fsDataServices;
@@ -58,7 +58,7 @@
 
 <body>
     <div id="divListTimeSheets">
-        <list-time-sheets  />
+        <time-sheet-app />
     </div>
 </body>
 
